[Fix] Promote image on prod

--- a/ansible/roles/wordpress-openshift-namespace/tasks/main.yml
+++ b/ansible/roles/wordpress-openshift-namespace/tasks/main.yml
@@ -143,6 +143,7 @@
     - menu_api.is
     - menu_api.rebuild
     - menu_api.redeploy
+    - menu_api.promote
 
 # A reminder that monitoring pod on wwp is expecting a pushgateway on wwp-infra
 - debug:
