[Fix] add debug variable

--- a/ansible/roles/wordpress-openshift-namespace/tasks/menu-api.yml
+++ b/ansible/roles/wordpress-openshift-namespace/tasks/menu-api.yml
@@ -41,10 +41,11 @@
         WPVERITAS_URL: "https://{{ _wp_veritas_base_url }}/api/v1/sites"
         WPVERITAS_HOSTNAME: "{{ _wp_veritas_base_url }}"
         EPFL_HOSTNAME: "{{ _epfl_hostname }}"
-        POD_NAME: "httpd-{{ _pod_name_suffix }}"
+        POD_NAME: "httpd-"
         MENU_API_PROTOCOL_HOST_PORT: "https://{{ _epfl_hostname }}"
         SERVICE_PORT: "3001"
         PATH_REFRESH_FILE: "."
+        DEBUG: {{ _debug }}
         REST_URL_END: "wp-json/epfl/v1/menus/top?lang="
         LABS_LINK_URL_FR: "https://www.epfl.ch/labs/fr/laboratoires/"
         LABS_LINK_URL_EN: "https://www.epfl.ch/labs/en/laboratories/"
@@ -87,14 +88,16 @@
     _openshift_environment: >-
       {{ "|
             www
-            labs" if openshift_namespace == "wwp"
-      else "int" }}
-    _pod_name_suffix: >-
-      {{ "www" if openshift_namespace == "wwp"
-      else "int" }}
+            labs
+            form" if openshift_namespace == "wwp"
+      else "|
+            int" }}
     _epfl_hostname: >-
       {{ "www.epfl.ch" if openshift_namespace == "wwp"
       else "migration-wp.epfl.ch" }}
+    _debug: >-
+      {{ false if openshift_namespace == "wwp"
+      else true }}
   register: _menu_api_config_map
 
 - name: "Redeploy {{ menu_api_image_name }}"
