--- a/docker/nginx/conf.d/nginx-wp.conf
+++ b/docker/nginx/conf.d/nginx-wp.conf
@@ -1,5 +1,10 @@
 root /wp-data/$host/htdocs;  # Where /wp-data is mounted anywhere, as decided by Kubernetes
 
+## TUNE buffers to avoid error ##  
+fastcgi_buffers 16 32k;
+fastcgi_buffer_size 64k;
+fastcgi_busy_buffers_size 64k;
+
 # All the PHP traffic goes through a single entry point. This
 # avoids stat()s on NFS when we know (through regexes below)
 # that the query is for WordPress. If, on the other hand, the
