[feature] add metrics for menu-api-siblings

--- a/ansible/roles/wordpress-openshift-namespace/tasks/monitoring.yml
+++ b/ansible/roles/wordpress-openshift-namespace/tasks/monitoring.yml
@@ -155,6 +155,7 @@
                 name: traefikdyna
 
 - name: Prometheus ConfigMap (configuration and sync scripts)
+  tags: monitoring.prometheus
   openshift:
     state: latest
     apiVersion: v1
