[Fix] rename LOCAL_ENV

--- a/ansible/roles/wordpress-openshift-namespace/tasks/menu-api.yml
+++ b/ansible/roles/wordpress-openshift-namespace/tasks/menu-api.yml
@@ -42,7 +42,7 @@
         SERVICE_PORT: "3001"
         PATH_REFRESH_FILE: "./data"
         DEBUG: {{ _debug }}
-        TEST_ENV: false
+        LOCAL_ENV: false
         REST_URL_END: "wp-json/epfl/v1/menus/top?lang="
         LABS_LINK_URL_FR: "https://www.epfl.ch/labs/fr/laboratoires/"
         LABS_LINK_URL_EN: "https://www.epfl.ch/labs/en/laboratories/"
