[fix] Use “new” module names from Ansible galaxy
Basically, the old ones don't work anymore because of some server-side hijinx. See discussion at https://forum.ansible.com/t/sync-problems-on-the-ansible-galaxy-api/6772/3

--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -1,6 +1,6 @@
 roles:
-- name: epfl_si.ansible_module_openshift
-- name: epfl_si.ansible_module_eyaml
+- name: epfl_si.ansible-module-openshift
+- name: epfl_si.ansible-module-eyaml
 
 collections:
 - name: epfl_si.actions
