[fix] Proper `apiVersion` for (OpenShift v3's) `DeploymentConfig`

--- a/ansible/roles/awx-instance/tasks/pushgateway.yml
+++ b/ansible/roles/awx-instance/tasks/pushgateway.yml
@@ -25,7 +25,7 @@
 - name: Pushgateway Deployment config
   openshift:
     state: latest
-    apiVersion: v1
+    apiVersion: apps.openshift.io/v1
     kind: DeploymentConfig
     metadata:
       name: pushgateway
