--- a/ansible/roles/awx-instance/vars/k8s-vars.yml
+++ b/ansible/roles/awx-instance/vars/k8s-vars.yml
@@ -19,6 +19,7 @@ awx_ee_version: "{{ awx_version }}"
 awx_ee_image_name: awx-ee
 awx_ee_image_mirrored_from: "ghcr.io/ansible/awx-ee:{{ awx_ee_version }}"
 awx_ee_image_mirrored_to: "docker-registry.default.svc:5000/wwp-test/awx-ee:{{ awx_ee_version }}"
+awx_ee_image_for_pods: "docker-registry.default.svc:5000/{{ ansible_oc_namespace }}/awx-ee:{{ awx_ee_version }}"
 
 awx_web_hostnames:
   wwp: awx-wwp.epfl.ch
