--- a/ansible/roles/awx-instance/tasks/main.yml
+++ b/ansible/roles/awx-instance/tasks/main.yml
@@ -24,6 +24,7 @@
     - awx.build
     - awx.build.awx
     - awx.build.receptor
+    - awx.build.ee
 
 - name: "Ansible Tower images promoted from {{ awx_build_namespace }}"
   when: "ansible_oc_namespace != awx_build_namespace"
@@ -45,7 +46,7 @@
       version: "{{ awx_version }}"
     - name: "{{ awx_receptor_image_name }}"
       version: "{{ awx_receptor_version }}"
-    - name: "{{ awx_ee_image_name }}"
+    - name: "wp-awx-ee"
       version: "{{ awx_ee_version }}"
   # 💡 Other image promotion tasks (for “core” WordPress serving and
   # cron images) can be found in
