--- a/ansible/roles/awx-instance/tasks/awx-objects.yml
+++ b/ansible/roles/awx-instance/tasks/awx-objects.yml
@@ -123,7 +123,7 @@
 
       update_json_status(changed=get_or_create_job_template(**kwarg))
 
-- name: "`default` InstanceGroup: provide /srv NFS volume to worker pods"
+- name: "Tweaked `default` InstanceGroup"
   awx_script:
     supports_check_mode: yes
     script: |
@@ -142,6 +142,7 @@
       spec:
         containers:
           - name: worker
+            imagePullPolicy: Always
             volumeMounts:
             - name: wp-nfs
               mountPath: "/srv"
