[fix] Make `/runner/.ansible/tmp` group-writable
As per OpenShift policy, processes run with a managed (i.e. unpredictable) UID, but always with GID 0. This is also the primary group of the `USER 1000` in the Docker image.

--- a/ansible/roles/awx-instance/tasks/k8s-builds.yml
+++ b/ansible/roles/awx-instance/tasks/k8s-builds.yml
@@ -90,7 +90,10 @@
        RUN set -e -x ; \
            export HOME=/runner ; \
            ansible-galaxy role install --force -i -r requirements.yml ; \
-           ansible-galaxy collection install --force -i -r requirements.yml
+           ansible-galaxy collection install --force -i -r requirements.yml ; \
+           rm -rf .ansible/tmp; \
+           mkdir .ansible/tmp; \
+           chmod 0770 .ansible/tmp
     tag: "{{ awx_version }}"
   register: _awx_ee_buildconfig
 
