[feature] Bake our Ansible dependencies into `wp-awx-ee`
- Obtain the list from the latest `requirements.yml` file on GitHub
- Install using straight `ansible-galaxy role install` and `ansible-galaxy collection install`, setting `HOME` so that the install products go into `/runner/.ansible`, which dovetails with the paths shown in the “role not found in ...” error message obtained when trying to run our jobs from the vanilla image.
- Document that changing `requirements.yml` entails having to rebuild `wp-awx-ee` (even though there is currently no way to do the latter with the configuration-as-code)

--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -1,3 +1,6 @@
+# 💡 Whenever this file changes on Git, the `wp-awx-ee` image needs to
+# be rebuilt in the `wwp-test` namespace, then promoted (using
+# `wpsible --prof -t awx.promote) into the other namespaces.
 roles:
 - name: epfl_si.ansible-module-openshift
 - name: epfl_si.ansible-module-eyaml
