[feature] Provide `backup-rw-credentials` to Restic

--- a/ansible/roles/awx-instance/tasks/awx-objects.yml
+++ b/ansible/roles/awx-instance/tasks/awx-objects.yml
@@ -146,6 +146,9 @@
             volumeMounts:
             - name: wp-nfs
               mountPath: "/srv"
+            envFrom:
+            - secretRef:
+                name: backup-rw-credentials
         volumes:
           - name: wp-nfs
             persistentVolumeClaim:
