[fix] `-t awx.build.ee`: was missing one task.

--- a/ansible/roles/awx-instance/tasks/k8s-builds.yml
+++ b/ansible/roles/awx-instance/tasks/k8s-builds.yml
@@ -106,6 +106,7 @@
            mkdir .ansible/tmp; \
            chmod 0770 .ansible/tmp
     tag: "{{ awx_version }}"
+  tags: awx.build.ee
   register: _awx_ee_buildconfig
 
 - name: "Rebuild {{ awx_ee_image_name }} now"
