--- a/ansible/roles/awx-instance/vars/k8s-vars.yml
+++ b/ansible/roles/awx-instance/vars/k8s-vars.yml
@@ -15,12 +15,11 @@ awx_receptor_socket_path: /var/run/receptor/receptor.sock
 
 # AWX will spin up pods using this image when it has work to do.
 # 💡 Here “ee” means “execution environment”, not “enterprise edition”.
-awx_ee_version: "{{ awx_version }}"
-awx_ee_base_image_mirrored_from: "ghcr.io/ansible/awx-ee:{{ awx_ee_version }}"
-awx_ee_base_image_mirrored_to: "docker-registry.default.svc:5000/wwp-test/awx-ee:{{ awx_ee_version }}"
 awx_ee_image_name: wp-awx-ee
 awx_ee_ansible_requirements_from_url: https://raw.githubusercontent.com/epfl-si/wp-ops/master/ansible/requirements.yml
-awx_ee_image_for_pods: "docker-registry.default.svc:5000/{{ ansible_oc_namespace }}/{{ awx_ee_image_name }}:{{ awx_ee_version }}"
+awx_ee_entrypoint_script_source: >-
+  https://raw.githubusercontent.com/ansible/ansible-builder/devel/src/ansible_builder/_target_scripts/entrypoint
+awx_ee_image_for_pods: "docker-registry.default.svc:5000/{{ ansible_oc_namespace }}/{{ awx_ee_image_name }}:latest"
 
 awx_web_hostnames:
   wwp: awx-wwp.epfl.ch
@@ -36,11 +35,6 @@ awx_inventories:
   wwp-test: test
 
 awx_service_account: awx
-
-awx_ee_busybox_static_download_url: >-
-  https://www.busybox.net/downloads/binaries/1.21.1/busybox-x86_64
-
-awx_ee_restic_version: 0.17.0
 
 # `curl` (and therefore) `dnf` and `yum` are broken on CentOS 9 +
 # OpenShift 3.11, but only during builds ☹
