--- a/docker/nginx/wpn_nginx.yml
+++ b/docker/nginx/wpn_nginx.yml
@@ -1,8 +1,17 @@
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: wordpress-test
+
+---
 apiVersion: v1
 kind: Pod
 metadata:
   name: wpn-nginx
   namespace: wordpress-test
+  labels:
+    app: wpn-nginx
 spec:
   containers:
     - name: wpn-nginx
@@ -10,3 +19,88 @@ spec:
 
   imagePullSecrets:
     - name: svc0041-rke2-puller-pull-secret
+
+# ---
+# https://erpdev.atlassian.net/browse/WPN-28
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: wpn-nginx-deployment
+#   namespace: wordpress-test
+#   labels:
+#     app: wpn-nginx
+#   annotations:
+#     authors: isas-fsd
+# spec:
+#   replicas: 1
+#   selector:
+#     matchLabels:
+#       app: wpn-nginx
+#   strategy:
+#     type: RollingUpdate
+#   template:
+#     metadata:
+#       labels:
+#         app: wpn-nginx
+#         version: 0.0.1
+#     spec:
+#       containers:
+#         - name: wpn-nginx
+#           image: quay-its.epfl.ch/svc0041/wpn-nginx:2024-002
+#           ports:
+#             - containerPort: 8080
+#               protocol: TCP
+#       imagePullSecrets:
+#         - name: svc0041-rke2-puller-pull-secret
+#       restartPolicy: Always
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: wpn-nginx-service
+  namespace: wordpress-test
+  labels:
+    app: wpn-nginx
+  annotations:
+    authors: isas-fsd
+spec:
+  ports:
+  - name: "80"
+    port: 80
+    protocol: TCP
+    targetPort: 8080
+  selector:
+    app: wpn-nginx
+  type: ClusterIP
+
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: wpn-nginx
+  namespace: wordpress-test
+spec:
+  rules:
+    # We can access pod though any worker because of the RKE2 default
+    # configuration, which uses NGINX using a DaemonSet.
+    - host: itswbhst0018.xaas.epfl.ch
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: wpn-nginx-service
+                port:
+                  number: 80
+    - host: itswbhst0020.xaas.epfl.ch
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: wpn-nginx-service
+                port:
+                  number: 80
