--- a/wpn_nginx.yml
+++ b/wpn_nginx.yml
@@ -1,58 +1,31 @@
 ---
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: wordpress-test
-
----
-apiVersion: v1
-kind: Pod
+# https://erpdev.atlassian.net/browse/WPN-28
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: wpn-nginx
   namespace: wordpress-test
-  labels:
-    app: wpn-nginx
 spec:
-  containers:
-    - name: wpn-nginx
-      image: quay-its.epfl.ch/svc0041/wpn-nginx:2024-002
-
-  imagePullSecrets:
-    - name: svc0041-rke2-puller-pull-secret
-
-# ---
-# https://erpdev.atlassian.net/browse/WPN-28
-# apiVersion: apps/v1
-# kind: Deployment
-# metadata:
-#   name: wpn-nginx-deployment
-#   namespace: wordpress-test
-#   labels:
-#     app: wpn-nginx
-#   annotations:
-#     authors: isas-fsd
-# spec:
-#   replicas: 1
-#   selector:
-#     matchLabels:
-#       app: wpn-nginx
-#   strategy:
-#     type: RollingUpdate
-#   template:
-#     metadata:
-#       labels:
-#         app: wpn-nginx
-#         version: 0.0.1
-#     spec:
-#       containers:
-#         - name: wpn-nginx
-#           image: quay-its.epfl.ch/svc0041/wpn-nginx:2024-002
-#           ports:
-#             - containerPort: 8080
-#               protocol: TCP
-#       imagePullSecrets:
-#         - name: svc0041-rke2-puller-pull-secret
-#       restartPolicy: Always
+  replicas: 1
+  selector:
+    matchLabels:
+      app: wpn-nginx
+  strategy:
+    type: RollingUpdate
+  template:
+    metadata:
+      labels:
+        app: wpn-nginx
+    spec:
+      containers:
+        - name: wpn-nginx
+          image: quay-its.epfl.ch/svc0041/wpn-nginx:2024-003
+          ports:
+            - containerPort: 8080
+              protocol: TCP
+      imagePullSecrets:
+        - name: svc0041-rke2-puller-pull-secret
+      restartPolicy: Always
 
 ---
 apiVersion: v1
