--- a/docker/nginx/conf.d/nginx-wp.conf
+++ b/docker/nginx/conf.d/nginx-wp.conf
@@ -21,7 +21,7 @@ fastcgi_param CONTENT_LENGTH     $content_length;
 fastcgi_param REQUEST_URI        $request_uri;
 fastcgi_param DOCUMENT_URI       $document_uri;
 fastcgi_param SERVER_PROTOCOL    $server_protocol;
-fastcgi_param HTTPS              $https if_not_empty;
+fastcgi_param HTTPS              on;
 
 fastcgi_param SERVER_SOFTWARE    nginx/$nginx_version;
 
