--- a/docker/nginx/conf.d/nginx-wp.conf
+++ b/docker/nginx/conf.d/nginx-wp.conf
@@ -1,5 +1,3 @@
-root /wp-data/$host/htdocs;  # Where /wp-data is mounted anywhere, as decided by Kubernetes
-
 ## TUNE buffers to avoid error ##  
 fastcgi_buffers 16 32k;
 fastcgi_buffer_size 64k;
@@ -36,6 +34,13 @@ fastcgi_param WP_ENV             test;
 # PHP only, required if PHP was built with --enable-force-cgi-redirect
 fastcgi_param REDIRECT_STATUS 200;
 fastcgi_param HTTP_PROXY      '';
+
+root /wp/6;
+
+location ~ /wp-content/(uploads|wpforms|languages) {
+    rewrite .*/wp-content/ / break;
+    root /wp-data/$host/htdocs;
+}
 
 # PHP queries are those with no dot in them, or those that end with
 # .php:
