[feature] https://wpn.epfl.ch
To match with 
https://github.com/epfl-fsd/fsd.team/commit/18f49ec5b54b807f1ac85e1012e65d54bcb03939

--- a/wpn_nginx.yml
+++ b/wpn_nginx.yml
@@ -88,3 +88,13 @@ spec:
                 name: wpn-nginx-service
                 port:
                   number: 80
+    - host: "wpn.fsd.team"
+      http:
+        paths:
+          - pathType: Prefix
+            path: /
+            backend:
+              service:
+                name: wpn-nginx-service
+                port:
+                  number: 80
