[refactor] Secret from an array

--- a/kubernetes/wpn-sites-A-B-C-R/wpn-nginx-secret.yml
+++ b/kubernetes/wpn-sites-A-B-C-R/wpn-nginx-secret.yml
@@ -8,36 +8,40 @@ metadata:
 stringData:
   get_db_credentials.php: |
     <?php
-
     namespace __entrypoint;
     function get_db_credentials ($wordpress) {
-        // TODO: look these up from a JSON Secret, maintained by the WordPress operator, tabulating all sites
-
-        switch ($wordpress['site_uri']) {
-            case '/site-A/':
-                return array('db_host' => 'mariadb-min',
-                             'db_name' => 'wp-db-site-a',
-                             'db_user' => 'wp-db-user-a',
-                             'db_password' => 'secret');
-            case '/site-B/':
-                return array('db_host' => 'mariadb-min',
-                             'db_name' => 'wp-db-site-b',
-                             'db_user' => 'wp-db-user-b',
-                             'db_password' => 'secret');
-            case '/site-A/site-C/':
-                return array('db_host' => 'mariadb-min',
-                             'db_name' => 'wp-db-site-c',
-                             'db_user' => 'wp-db-user-c',
-                             'db_password' => 'secret');
-            case '/site-R/':
-                return array('db_host' => 'mariadb-min',
-                             'db_name' => 'wp-db-site-r',
-                             'db_user' => 'wp-db-user-r',
-                             'db_password' => 'secret');
-            case '/':
-                return array('db_host' => 'mariadb-min',
-                             'db_name' => 'wordpress-test',
-                             'db_user' => 'wordpress',
-                             'db_password' => 'secret');
-        }
+        $databases_config = [
+            '/site-A/' => [
+                'db_host' => 'mariadb-min',
+                'db_name' => 'wp-db-site-a',
+                'db_user' => 'wp-db-user-site-a',
+                'db_password' => 'secret'
+            ],
+            '/site-B/' => [
+                'db_host' => 'mariadb-min',
+                'db_name' => 'wp-db-site-b',
+                'db_user' => 'wp-db-user-site-b',
+                'db_password' => 'secret'
+            ],
+            '/site-A/site-C/' => [
+                'db_host' => 'mariadb-min',
+                'db_name' => 'wp-db-site-c',
+                'db_user' => 'wp-db-user-site-c',
+                'db_password' => 'secret'
+            ],
+            '/site-R/' => [
+                'db_host' => 'mariadb-min',
+                'db_name' => 'wp-db-site-r',
+                'db_user' => 'wp-db-user-site-r',
+                'db_password' => 'secret'
+            ],
+            '/' => [
+                'db_host' => 'mariadb-min',
+                'db_name' => 'wordpress-test',
+                'db_user' => 'wordpress',
+                'db_password' => 'secret'
+            ],
+        ];
+        error_log(print_r($wordpress, true));
+        return $databases_config[$wordpress['site_uri']];
     }
