--- a/kubernetes/wpn-sites-A-B-C-R/wpn-nginx-site-R.yml
+++ b/kubernetes/wpn-sites-A-B-C-R/wpn-nginx-site-R.yml
@@ -65,3 +65,25 @@ spec:
   username: wp-db-user-r
   grantOption: false
   host: "%"
+
+---
+apiVersion: k8s.mariadb.com/v1alpha1
+kind: Backup
+metadata:
+  namespace: wordpress-test
+  name: scheduled-backup-site-r
+spec:
+  mariaDbRef:
+    name: mariadb-min
+  databases:
+    - wp-db-site-r
+  schedule:
+    cron: "0 6 * * *"
+    suspend: false
+  storage:
+    persistentVolumeClaim:
+      resources:
+        requests:
+          storage: 100Mi
+      accessModes:
+        - ReadWriteOnce
