--- a/ansible/roles/rke2-host/tasks/main.yml
+++ b/ansible/roles/rke2-host/tasks/main.yml
@@ -20,6 +20,8 @@
         - system.config
         - system.config.users
   with_items: "{{ USERS }}"
+  loop_control:
+    loop_var: user
 
 - name: Config ssh
   tags:
