--- a/kubernetes/wpn-sites/wpn-nginx-secret.yml
+++ b/kubernetes/wpn-sites/wpn-nginx-secret.yml
@@ -29,6 +29,12 @@ stringData:
                 'db_user' => 'wp-db-user-site-c',
                 'db_password' => 'secret'
             ],
+            '/site-E/' => [
+                'db_host' => 'mariadb-min',
+                'db_name' => 'wp-db-site-r',
+                'db_user' => 'wp-db-user-site-e',
+                'db_password' => 'secret'
+            ],
             '/site-R/' => [
                 'db_host' => 'mariadb-min',
                 'db_name' => 'wp-db-site-r',
